[package]
name = "manual_data_cleaner"
version = "0.1.0"
authors = ["Javier Guallart <javier78gh@gmail.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[dependencies]
egui = "0.30.0"
eframe = { version = "0.22", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
egui_plot = { version = "0.26.0-alpha.2" }
itertools = "0.14.0"
rfd = "0.15.2"
chrono = "0.4.40"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["winnt", "winuser"] }

[build-dependencies]
chrono = "0.4.40"
